--- a/pkg/bundler/gpuoperator/templates/values.yaml.tmpl
+++ b/pkg/bundler/gpuoperator/templates/values.yaml.tmpl
@@ -1,6 +1,7 @@
 # GPU Operator Helm Values
 # Generated from Cloud Native Stack Recipe
 # Timestamp: {{ .Timestamp }}
+# Version: {{ .Version }}
 
 operator:
   {{- if .DriverRegistry.Context }}
