--- a/pkg/bundler/networkoperator/templates/README.md.tmpl
+++ b/pkg/bundler/networkoperator/templates/README.md.tmpl
@@ -1,6 +1,8 @@
 # Network Operator Deployment Bundle
 
-Generated from Cloud Native Stack Recipe on {{ .Script.Timestamp }}
+Generated from Cloud Native Stack Recipe  
+Timestamp: {{ .Timestamp }}
+Version: {{ .Version }}
 
 ## Overview
 
