--- a/pkg/bundler/networkoperator/templates/nicclusterpolicy.yaml.tmpl
+++ b/pkg/bundler/networkoperator/templates/nicclusterpolicy.yaml.tmpl
@@ -1,3 +1,8 @@
+# Network Operator ClusterPolicy Manifest
+# Generated from Cloud Native Stack Recipe
+# Timestamp: {{ .Timestamp }}
+# Version: {{ .Version }}
+
 apiVersion: mellanox.com/v1alpha1
 kind: NicClusterPolicy
 metadata:
