--- a/pkg/bundler/gpuoperator/templates/clusterpolicy.yaml.tmpl
+++ b/pkg/bundler/gpuoperator/templates/clusterpolicy.yaml.tmpl
@@ -1,3 +1,8 @@
+# GPU Operator ClusterPolicy Manifest
+# Generated from Cloud Native Stack Recipe
+# Timestamp: {{ .Timestamp }}
+# Version: {{ .Version }}
+
 apiVersion: nvidia.com/v1
 kind: ClusterPolicy
 metadata:
