--- a/pkg/bundler/networkoperator/templates/install.sh.tmpl
+++ b/pkg/bundler/networkoperator/templates/install.sh.tmpl
@@ -2,6 +2,7 @@
 # Network Operator Installation Script
 # Generated from Cloud Native Stack Recipe
 # Timestamp: {{ .Timestamp }}
+# Version: {{ .Version }}
 
 set -e
 
