--- a/pkg/bundler/networkoperator/templates/values.yaml.tmpl
+++ b/pkg/bundler/networkoperator/templates/values.yaml.tmpl
@@ -1,6 +1,7 @@
 # Network Operator Helm Values
 # Generated from Cloud Native Stack Recipe
 # Timestamp: {{ .Timestamp }}
+# Version: {{ .Version }}
 
 operator:
   {{- if .NetworkOperatorVersion.Value }}
