chore: insert version in artifact comment

--- a/pkg/bundler/gpuoperator/templates/values.yaml.tmpl
+++ b/pkg/bundler/gpuoperator/templates/values.yaml.tmpl
@@ -1,7 +1,8 @@
 # GPU Operator Helm Values
 # Generated from Cloud Native Stack Recipe
 # Timestamp: {{ .Timestamp }}
-# Version: {{ .Version }}
+# Bundler Version: {{ .Version }}
+# Recipe Bundler Version: {{ .RecipeVersion }}
 
 operator:
   {{- if .DriverRegistry.Context }}
