--- a/pkg/bundler/gpuoperator/templates/README.md.tmpl
+++ b/pkg/bundler/gpuoperator/templates/README.md.tmpl
@@ -2,7 +2,8 @@
 
 Generated from Cloud Native Stack Recipe  
 Timestamp: {{ .Timestamp }}
-Version: {{ .Version }}
+Bundler Version: {{ .Version }}
+Recipe Bundler Version: {{ .RecipeVersion }}
 
 ## Overview
 
