--- a/pkg/bundler/gpuoperator/templates/clusterpolicy.yaml.tmpl
+++ b/pkg/bundler/gpuoperator/templates/clusterpolicy.yaml.tmpl
@@ -1,7 +1,8 @@
 # GPU Operator ClusterPolicy Manifest
 # Generated from Cloud Native Stack Recipe
 # Timestamp: {{ .Timestamp }}
-# Version: {{ .Version }}
+# Bundler Version: {{ .Version }}
+# Recipe Bundler Version: {{ .RecipeVersion }}
 
 apiVersion: nvidia.com/v1
 kind: ClusterPolicy
