--- a/pkg/bundler/networkoperator/templates/install.sh.tmpl
+++ b/pkg/bundler/networkoperator/templates/install.sh.tmpl
@@ -2,7 +2,8 @@
 # Network Operator Installation Script
 # Generated from Cloud Native Stack Recipe
 # Timestamp: {{ .Timestamp }}
-# Version: {{ .Version }}
+# Bundler Version: {{ .Version }}
+# Recipe Bundler Version: {{ .RecipeVersion }}
 
 set -e
 
