--- a/pkg/bundler/networkoperator/templates/README.md.tmpl
+++ b/pkg/bundler/networkoperator/templates/README.md.tmpl
@@ -1,9 +1,9 @@
 # Network Operator Deployment Bundle
 
 Generated from Cloud Native Stack Recipe  
-Timestamp: {{ .Timestamp }}
-Bundler Version: {{ .Version }}
-Recipe Bundler Version: {{ .RecipeVersion }}
+Timestamp: {{ .Script.Timestamp }}
+Bundler Version: {{ .Script.Version }}
+Recipe Bundler Version: {{ .Script.RecipeVersion }}
 
 ## Overview
 
