--- a/pkg/component/networkoperator/templates/install.sh.tmpl
+++ b/pkg/component/networkoperator/templates/install.sh.tmpl
@@ -3,7 +3,7 @@
 # Generated from Cloud Native Stack Recipe
 # Timestamp: {{ .Timestamp }}
 # Bundler Version: {{ .Version }}
-# Recipe Bundler Version: {{ .RecipeVersion }}
+# Recipe Version: {{ .RecipeVersion }}
 
 set -e
 
