--- a/pkg/component/gpuoperator/templates/clusterpolicy.yaml.tmpl
+++ b/pkg/component/gpuoperator/templates/clusterpolicy.yaml.tmpl
@@ -2,7 +2,7 @@
 # Generated from Cloud Native Stack Recipe
 # Timestamp: {{ .Timestamp }}
 # Bundler Version: {{ .Version }}
-# Recipe Bundler Version: {{ .RecipeVersion }}
+# Recipe Version: {{ .RecipeVersion }}
 
 apiVersion: nvidia.com/v1
 kind: ClusterPolicy
