--- a/pkg/component/networkoperator/templates/nicclusterpolicy.yaml.tmpl
+++ b/pkg/component/networkoperator/templates/nicclusterpolicy.yaml.tmpl
@@ -2,7 +2,7 @@
 # Generated from Cloud Native Stack Recipe
 # Timestamp: {{ .Timestamp }}
 # Bundler Version: {{ .Version }}
-# Recipe Bundler Version: {{ .RecipeVersion }}
+# Recipe Version: {{ .RecipeVersion }}
 
 apiVersion: mellanox.com/v1alpha1
 kind: NicClusterPolicy
