bug: fix set overrides on bundle

--- a/pkg/component/gpuoperator/templates/values.yaml.tmpl
+++ b/pkg/component/gpuoperator/templates/values.yaml.tmpl
@@ -50,6 +50,11 @@ mig:
 gds:
   enabled: {{ .EnableGDS }}
 
+{{- if .GDRCopy.Enabled }}
+gdrcopy:
+  enabled: {{ .GDRCopy.Enabled }}
+{{- end }}
+
 {{- if .VGPULicenseServer }}
 vgpuManager:
   enabled: true
