--- a/pkg/component/networkoperator/templates/README.md.tmpl
+++ b/pkg/component/networkoperator/templates/README.md.tmpl
@@ -2,7 +2,7 @@
 
 ```shell
 Generated from Cloud Native Stack Recipe
-Timestamp: {{ .Script.Timestamp }}
+
 Bundler Version: {{ .Script.Version }}
 Recipe Version: {{ .Script.RecipeVersion }}
 ```
@@ -13,7 +13,7 @@ This bundle contains everything needed to deploy the NVIDIA Network Operator on 
 
 ## Prerequisites
 
-- Kubernetes cluster (version {{ .Script.K8sVersion }} or compatible)
+- Kubernetes cluster
 - kubectl configured with cluster access
 - Helm 3.x installed
 - Cluster admin permissions
